--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,10 @@
-* {
-    box-sizing: border-box;
+html, body {
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
 }
-
 body {
     background-color: rgba(245, 255, 250, 0);
-}
-
-h2, h3 {
-    font-family: caladea;
-    color: #871711;
-    margin-left: 100px;
-    font-size: 30px;
-}
-
-h4 {
-    font-family: caladea;
-    color: #871711;
-    margin-left: 100px;
-    font-size: 20px;
 }
 
 h1 {
@@ -25,26 +12,46 @@ h1 {
     font-family: caladea;
 }
 
-header {
+h2{
+    font-family: caladea;
+    color: #871711;
+    font-size: 30px;
+}
+
+h3 {
+    font-family: caladea;
+    color: #871711;
+    font-size: 30px;
+}
+
+h4 {
+    font-family: caladea;
+    color: #871711;
+    font-size: 20px;
+}
+
+.header {
     background-color: #778899;
     font-size: 50px;
     text-align: center;
     padding: 10px;
-    margin: 50px, auto;
+    margin: 0 auto;
+    text-align: center;
 }
 
-header p {
+.header p {
     color:#871711;
-}
-
-h2 {
-    margin-left: 100px;
 }
 
 .retroimg {
     margin-top: 50px;
-    margin-left: 100px;
     margin-bottom: 50px;
+    text-align: center;
+}
+
+.introduction {
+    margin: 0 auto;
+    text-align: center;
 }
 
 p {
@@ -55,7 +62,7 @@ p {
     line-height: 32px;
     margin-bottom: 20px;
     max-width: 940px;
-    margin-left: 100px;
+    text-align: center;
 }
 
 nav {
@@ -66,12 +73,13 @@ nav {
     line-height: 32px;
     margin-bottom: 50px;
     max-width: 940px;
-    margin-left: 100px; 
+    margin: 0 auto;
+    text-align: left; 
 }
 
 
 .color-type {
-    margin-left: 100px;
+    text-align: center;
 }
 
 .color-type li {
@@ -136,6 +144,9 @@ a:hover{
     border: 1px solid;
     padding-bottom: 50px;
     margin-bottom: 50px;
+    margin: 50px auto;
+    max-width: 940px;
+    text-align: center;
 }
 
 
@@ -143,6 +154,9 @@ a:hover{
     border: 1px solid;
     padding-bottom: 50px;
     margin-bottom: 50px;
+    margin: 50px auto;
+    max-width: 940px;
+    justify-content: center;
 }
 
 .font-panel {
@@ -164,11 +178,13 @@ a:hover{
     height: 550px;
     overflow-x: scroll;
     margin-bottom: 50px;
+    text-align: center;
+    margin: 50px auto;
+    max-width: 940px;
 }
 
 #aes1 {
     width:200px
-    padding-left: 100px;
 }
 
 #aes3 {
@@ -195,10 +211,12 @@ footer {
 
 footer p {
     font-weight: bold;
-    margin: auto;
+    margin: 10px auto;
     font-family: monospace;
 }
 
 .fa-brands {
-    width: 100px;
+    width: 200px;
+    display: inline-block;
+    margin: 0 10px;
 }
